--- a/config/database.yml
+++ b/config/database.yml
@@ -28,6 +28,7 @@ production:
   <<: *default
   host: <%= ENV['TEJIDOS_DATABASE_HOST'] %>
   database: tejidos_production
+  port: 5333
   pool: 5
   username: <%= ENV['TEJIDOS_DATABASE_USER'] %>
   password: <%= ENV['TEJIDOS_DATABASE_PASSWORD'] %>
