--- a/config/database.yml
+++ b/config/database.yml
@@ -27,7 +27,7 @@ test: &test
 production:
   <<: *default
   host: <%= ENV['TEJIDOS_DATABASE_HOST'] %>
-  database: tejidos_production
+  database: tejidos
   port: 5333
   pool: 5
   username: <%= ENV['TEJIDOS_DATABASE_USER'] %>
