application controller error fix

--- a/config/database.yml
+++ b/config/database.yml
@@ -28,7 +28,7 @@ production:
   <<: *default
   host: <%= ENV['TEJIDOS_DATABASE_HOST'] %>
   database: tejidos
-  port: 5333
+  port: <%= ENV['TEJIDOS_DATABASE_PORT'] %>
   pool: 5
   username: <%= ENV['TEJIDOS_DATABASE_USER'] %>
   password: <%= ENV['TEJIDOS_DATABASE_PASSWORD'] %>
