--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -3,12 +3,18 @@ upstream puma {
 }
 
 server {
-  listen 80 default_server deferred;
+  # listen 80 default_server deferred;
   # server_name example.com;
+
+  listen 443 ssl;
 
   root /home/ubuntu/TejidosAPI/current/public;
   access_log /home/ubuntu/TejidosAPI/current/log/nginx.access.log;
   error_log /home/ubuntu/TejidosAPI/current/log/nginx.error.log info;
+
+  server_name TejidosAWS;
+  ssl_certificate /etc/nginx/ssl/nginx.crt;
+  ssl_certificate_key /etc/nginx/ssl/nginx.key;
 
   location ^~ /assets/ {
     gzip_static on;
